[package]
name = "leaf"
description = "Machine Learning Framework"
version = "0.1.2"
authors = [
  "Maximilian Goisser <max@autumnai.com>",
  "Michael Hirn <mj@autumnai.com>"
]
repository = "https://github.com/autumnai/leaf"
homepage = "https://github.com/autumnai/leaf"
documentation = "http://autumnai.github.io/leaf"
readme = "README.md"
keywords = ["deep-learning", "neural-networks", "machine-learning", "framework"]
license = "MIT"

[dependencies]
phloem = "~0.3.0"
collenchyma = "= 0.0.3"
log = "~0.3.2"
clippy = { version = "0.0.41", optional = true }

[features]
default = []
dev = []
lint = ["clippy"]
