[package]
name = "leaf"
description = "Machine Learning Framework for Hackers"
version = "0.2.1"
authors = [
  "Maximilian Goisser <max@autumnai.com>",
  "Michael Hirn <mj@autumnai.com>"
]
repository = "https://github.com/autumnai/leaf"
homepage = "https://github.com/autumnai/leaf"
documentation = "http://autumnai.github.io/leaf"
readme = "README.md"
keywords = ["deep-learning", "neural-networks", "machine-learning", "framework"]
license = "MIT OR Apache-2.0"

build = "build.rs"

[dependencies]
collenchyma = { version = "0.0.8", default-features = false, features = ["native"] } # native feature to read/write data into tensors
collenchyma-blas = { version = "0.2.0", default-features = false, features = ["native"] } # only compiles with native feature
collenchyma-nn = { version = "0.3.2", default-features = false }

log = "0.3.2"
rand = "0.3.0"
num = "0.1"

capnp = "0.6.2"

timeit = "0.1.2"

clippy = { version = "0.0.41", optional = true }

[build-dependencies]
capnpc = "0.6.1"

[dev-dependencies]
env_logger = "0.3"

[features]
default = ["native"]
native = ["collenchyma-blas/native", "collenchyma-nn/native"]
cuda = ["collenchyma/cuda", "collenchyma-blas/cuda", "collenchyma-nn/cuda"]
opencl = ["collenchyma/opencl", "collenchyma-blas/opencl", "collenchyma-nn/opencl"]

travis = ["native"]
dev = []
unstable = [] # for travis-cargo
lint = ["clippy"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
